--- a/libs/pigment/pigmentextension.desktop
+++ b/libs/pigment/pigmentextension.desktop
@@ -8,6 +8,7 @@ Comment[es]=Un módulo que implementa una extensión a un espacio de color del s
 Comment[pt]=Um módulo que implementa um espaço de cores completo para usar com o Sistema de Manipulação de Cores por Pigmentos
 Comment[pt_BR]=Um módulo que implementa uma extensão para espaço de cores do Sistema de Manipulação de Pigmeto de Cor
 Comment[sv]=En modul som implementerar en fullständig färgrymd för användning med systemet för hantering av pigmentfärg
+Comment[x-test]=xxA module implementing an extension to a colorspace of the Pigment Color Manipulation Systemxx
 [PropertyDef::X-Pigment-MinVersion]
 Type=int
 [PropertyDef::X-Flake-PluginVersion]
